force-app/main/default/objects/MappingMatrix__mdt/MappingMatrix__mdt.object-meta.xml
<CustomObject>
    <description>generic mapping matrix to store values based on combinations.</description>
    <label>Mapping Matrix</label>
    <pluralLabel>Mapping Matrixs</pluralLabel>
</CustomObject>