force-app/main/default/objects/MappingMatrix__mdt/fields/ObjectName__c.field-meta.xml
<CustomField>
    <fullName>ObjectName__c</fullName>
    <description>stores sobject name</description>
    <label>Object Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opportunity</fullName>
                <default>true</default>
                <label>Opportunity</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>