force-app/main/default/objects/MappingMatrix__mdt/fields/OutputMapping__c.field-meta.xml
<CustomField>
    <fullName>OutputMapping__c</fullName>
    <description>stores output value of primary and secondary input combination.</description>
    <label>Output Mapping</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>