force-app/main/default/objects/MappingMatrix__mdt/fields/PrimaryInput__c.field-meta.xml
<CustomField>
    <fullName>PrimaryInput__c</fullName>
    <description>stores data for primary mapping</description>
    <label>Primary Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>