force-app/main/default/objects/MappingMatrix__mdt/fields/SecondaryInput__c.field-meta.xml
<CustomField>
    <fullName>SecondaryInput__c</fullName>
    <description>stores data for secondary input mapping.</description>
    <label>Secondary Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>